fix(solana): support reduced slot times